Mon Aug  9 17:46:13 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/Deadline/publisher.cpp:
        * tests/DCPS/Deadline/subscriber.cpp:
        * tests/DCPS/UnitTests/DurationToTimeValue.cpp:

          Fixed a few warnings.
          
Mon Aug  9 15:21:25 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * java/jms/build.xml:
        * java/jms/compat/build.xml:

          Added 'includeAntRuntime' attribute to <javac> to avoid warning
          on newer versions of ant.

Mon Aug  9 14:38:13 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tools/repoctl/repoctl.cpp:

          strdup is not in the standard library, need ACE_OS.

        * dds/DCPS/InfoRepoUtils.cpp:
        * dds/DCPS/OfferedDeadlineWatchdog.cpp:
        * tests/DCPS/Deadline/DataReaderListener.cpp:
        * tests/DCPS/Deadline/DataWriterListenerImpl.cpp:
        * tests/DCPS/Deadline/Writer.cpp:
        * tests/DCPS/Deadline/publisher.cpp:
        * tests/DCPS/Deadline/subscriber.cpp:
        * tools/dissector/packet.cpp:

          Cleaned up whitespace.

Sun Aug  8 16:54:25 UTC 2010  Don Busch  <buschd@ociweb.com>

        * Merged the branch "oci_buschd_monitor_2010Jul22", which
          includes handling of a host:port endpoint for the InfoRepo
          IOR, integraton of the dissector with Wireshark 1.3.x,
          a new default IOR/Endpoint for the monitor, and tests.
          For details see the branch-specific change log at
          docs/history/ChangeLog-oci_buschd_monitor_2010Jul22.

Fri Aug  6 21:14:26 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/OfferedDeadlineWatchdog.cpp:

          Fixed execute() to call the listener once per missed
          deadline period. Previously it could be called twice
          when the timer is triggered and then a new sample is
          received right after and missed deadline, it could
          cause incorrect status counter.

        * tests/DCPS/Deadline/DataReaderListener.cpp: